# ml-ai

./: .gitignore  pyproject.toml
mandatory1/: pyproject.toml
mandatory1/notebooks/: logistic_regression.ipynb  regression.ipynb
