[tool.poetry]
name = "ml-ai"
version = "0.1.0"
description = ""
authors = ["Moshizzl3 <81045658+Moshizzl3@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
