[tool.poetry]
name = "mandatory1"
version = "0.1.0"
description = ""
authors = ["Moshizzl3 <81045658+Moshizzl3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"
numpy = "^1.26.4"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
